# Changelog
# $Id$
mm-dd-yy - Version 6.0.4

  - Fix for Bug#22931433, GETTING VALUE OF BIT COLUMN RESULTS IN EXCEPTION.

06-17-16 - Version 6.0.3

  - Fix for Bug#23535571, EXCESSIVE MEMORY USAGE WHEN ENABLEPACKETDEBUG=TRUE.

  - Fix for Bug#23212347, ALL API CALLS ON RESULTSET METADATA RESULTS IN NPE WHEN USESERVERPREPSTMTS=TRUE.

  - Fix for Bug#23201930, CLIENT HANG WHEN RSLT CUNCURRENCY=CONCUR_UPDATABLE AND RSLTSET TYPE=FORWARD_ONLY.

  - Fix for Bug#23188498, CLIENT HANG WHILE USING SERVERPREPSTMT WHEN PROFILESQL=TRUE AND USEIS=TRUE.

  - Fix for Bug#22678872, NPE DURING UPDATE WITH FABRIC.
    New property 'loadBalanceHostRemovalGracePeriod' sets the grace period when removing hosts from a load-balanced connection.

  - Fix for Bug#71131 (18068303), Poor error message in CallableStatement.java.

  - Fix for Bug#59462 (16736619), ConcurrentModificationException inside ConnectionImpl.closeAllOpenStatements().

  - Fix for Bug#22848249, LOADBALANCECONNECTIONGROUPMANAGER.REMOVEHOST() NOT WORKING AS EXPECTED.

  - Fix for Bug#22730682, ARRAYINDEXOUTOFBOUNDSEXCEPTION FROM CONNECTIONGROUPMANAGER.REMOVEHOST().

  - Fix for Bug#77171 (21181466), On every connect getting sql_mode from server creates unnecessary exception.

  - Fix for Bug#79343 (22353759), NPE in TimeUtil.loadTimeZoneMappings causing server time zone value unrecognized.

  - Fix for Bug#22038729, X DevAPI: Any API call after a failed CALL PROC() results in hang

  - Remove Schema.drop(), Collection.drop() and replaced with X DevAPI's session.dropSchema() and session.dropCollection().
    Also added session.dropTable().

  - Fix for Bug#22932078, GETTIMESTAMP() RETURNS WRONG VALUE FOR FRACTIONAL PART

  - Extracted packet readers from MysqlaProtocol.

  - Fix for Bug#22972057, X protocol CLIENT HANGS AFTER CONNECTION FAILURE

  - Fix for Bug#23044312, NullPointerException in X protocol AsyncMessageReader due to race condition

  - Returned support for MySQL 5.5 and 5.6.

04-05-16 - Version 6.0.2
